--- a/app/views/office/registrations/_request.html.haml
+++ b/app/views/office/registrations/_request.html.haml
@@ -1,6 +1,6 @@
 %table.table.table-key-values
   %caption
-    %h6 Other Registration Information
+    %h6 Registration Information
   %tbody
     %tr
       %th Role
