--- a/app/views/office/registrations/checklists.html.haml
+++ b/app/views/office/registrations/checklists.html.haml
@@ -4,4 +4,4 @@
       - add_button_to(c, "PDF Format", :format => :pdf)
 
     %h2 #{event.display_name} Checklists
-    = render 'list_type', list: 'checklists_list', registrations: registrations
+    = render 'grouped_by_role', list: 'checklists', registrations: registrations
