--- a/app/views/office/registrations/details.html.haml
+++ b/app/views/office/registrations/details.html.haml
@@ -1,4 +1,4 @@
 .block
   .content
     %h2 #{event.display_name} Details
-    = render 'list_type', list: 'details_list', registrations: registrations, non_registrations: non_registrations
+    = render 'grouped_by_role', list: 'requests', registrations: registrations, non_registrations: non_registrations
