membership model & migration to auto select active team members

--- a/app/views/office/angels/_list.html.haml
+++ b/app/views/office/angels/_list.html.haml
@@ -12,7 +12,9 @@
     - angels.each do |a|
       %tr
         %td= gravatar_image(a.gravatar)
-        %td= link_to_show(office_angel_path(a), a.full_name)
+        %td
+          = link_to_show(office_angel_path(a), a.full_name)
+          = angel_membership_status(a)
         %td= a.email
         %td= compact_address(a)
         %td= compact_phones(a)
