--- a/app/views/office/memberships/_team_group.html.haml
+++ b/app/views/office/memberships/_team_group.html.haml
@@ -3,9 +3,6 @@
     - add_email_button_to(c, bcc: team_group.members.map(&:email))
 
   %h2= team_group.human_name
-  %p
-    People who have been on team, or attended a Team Workshop or Assistants Training Workshop within the last
-    #{team_group.months} months
 
   %table.table.tablesorter
     %caption
@@ -13,6 +10,7 @@
     %thead
       %tr
         %th Name
+        %th Status
         %th.center Highest Level
         %th.qty Total On Team
         %th.center 6 months
@@ -26,7 +24,8 @@
     %tbody
       - team_group.members.each do |member|
         %tr
-          %td= link_to_show(office_angel_path(member), member.display_name)
+          %td= link_to_show(office_membership_path(member), member.display_name)
+          %td= member.status
           %td.center= member.highest_level
           %td.qty= member.on_team.size
           = registration_counts_by_milestones(member.on_team_or_team_workshops, [6.months, 12.months, 18.months, 2.years, 3.years, 4.years])
