--- a/app/views/office/memberships/index.html.haml
+++ b/app/views/office/memberships/index.html.haml
@@ -25,7 +25,7 @@
       %tbody
         - @memberships.each do |member|
           %tr
-            %td= link_to_show(office_membership_path(member), member.display_name)
+            %td= link_to_show(office_membership_path(member), member.full_name_with_context)
             %td= member.status
             %td.center= member.highest_level
             %td.qty= member.on_team.size
