--- a/app/views/layouts/users/application.html.haml
+++ b/app/views/layouts/users/application.html.haml
@@ -5,6 +5,7 @@
     %title= @title || "HAI #{Site.name.upcase} System"
     %link{:href => "/favicon-#{Site.name}.ico", :rel => "shortcut icon"}/
     = stylesheet_link_tag "office/application"
+    %script{src:"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
     = javascript_include_tag 'office/application'
     = csrf_meta_tag
     = yield :head
