cleanup membership views

--- a/app/views/office/memberships/edit.html.haml
+++ b/app/views/office/memberships/edit.html.haml
@@ -3,6 +3,6 @@
     = controls do |c|
       - add_button_to(c, :delete)
 
-    %h2 Editing #{@membership.display_name}
+    %h2 Editing Membership
 
     = render 'form'
