--- a/app/views/office/memberships/show.html.haml
+++ b/app/views/office/memberships/show.html.haml
@@ -4,7 +4,7 @@
       - add_button_to(c, :edit)
       - add_button_to(c, :delete)
 
-    %h2 Team Member #{@membership.display_name}
+    %h2 Membership
 
     = render 'membership', membership: @membership
 
