--- a/app/views/office/memberships/_registrations.html.haml
+++ b/app/views/office/memberships/_registrations.html.haml
@@ -8,5 +8,5 @@
     - registrations.each do |r|
       %tr
         %td= link_to_show(office_event_registration_path(r.event, r), r.event_name)
-        %td= r.start_date
+        %td= l r.start_date
         %td= r.notes
