remove cancan gem

--- a/app/views/users/dashboards/_registrations.html.haml
+++ b/app/views/users/dashboards/_registrations.html.haml
@@ -11,5 +11,4 @@
         %td= l registration.start_date
         %td= registration.event_name
         %td= registration.role
-        %td= link_to('Roster', users_roster_path(id: registration.event)) if can?(:roster, registration)
-
+        %td= link_to('Roster', users_roster_path(id: registration.event))
