--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,10 +1,10 @@
 <h2>Forgot your password?</h2>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { class: 'form-horizontal', :method => :post }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="inputs">
-    <%= f.input :email, :required => true %>
+  <div class="form-inputs">
+    <%= f.input :email, :required => true, :autofocus => true %>
   </div>
 
   <div class="form-actions">
@@ -12,4 +12,4 @@
   </div>
 <% end %>
 
-<%= render "links" %>
+<%= render "devise/shared/links" %>
