--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,10 +1,11 @@
 <h2>Resend unlock instructions</h2>
 
-<%= simple_form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { class: 'form-horizontal', :method => :post }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= f.error_notification %>
+  <%= f.full_error :unlock_token %>
 
-  <div class="inputs">
-    <%= f.input :email, :required => true %>
+  <div class="form-inputs">
+    <%= f.input :email, :required => true, :autofocus => true %>
   </div>
 
   <div class="form-actions">
@@ -12,4 +13,4 @@
   </div>
 <% end %>
 
-<%= render "links" %>
+<%= render "devise/shared/links" %>
