--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,15 +1,15 @@
 <h2>Set your password</h2>
 
-<%= simple_form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { class: 'form-horizontal', :method => :put } do |f| %>
+<%= simple_form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
   <%= f.hidden_field :invitation_token %>
 
     <%= f.error_notification %>
 
-    <div class="inputs">
+    <div class="form-inputs">
       <%= f.input :password, :required => true %>
     </div>
 
-    <div class="inputs">
+    <div class="form-inputs">
       <%= f.input :password_confirmation, :required => true %>
     </div>
 
