replace cancan gem with pundit

--- a/app/views/users/dashboards/_registrations.html.haml
+++ b/app/views/users/dashboards/_registrations.html.haml
@@ -11,4 +11,4 @@
         %td= l registration.start_date
         %td= registration.event_name
         %td= registration.role
-        %td= link_to('Roster', users_roster_path(id: registration.event))
+        %td= link_to('Roster', users_roster_path(id: registration.event)) if policy(Roster.new(registration.event)).show?
