move angel data into registration; avoid nesting angel into registration

--- a/app/views/application/_roster_list.html.haml
+++ b/app/views/application/_roster_list.html.haml
@@ -7,5 +7,5 @@
       #{r.full_name}
       %br
       #{r.email}
-    %td= compact_address(r.angel)
-    %td= compact_phones(r.angel)
+    %td= compact_address(r)
+    %td= compact_phones(r)
