--- a/app/views/office/registrations/_request.html.haml
+++ b/app/views/office/registrations/_request.html.haml
@@ -6,6 +6,9 @@
       %th Role
       %td= registration.role
     %tr
+      %th Gender
+      %td= registration.gender
+    %tr
       %th Special Requests
       %td= registration_requests(registration)
     %tr
