--- a/app/views/office/angels/_form.html.haml
+++ b/app/views/office/angels/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for([:office, angel], html: {class: 'form-horizontal'}) do |f|
-  = render 'fields', :f => f
+  = render 'office/registrations/fields_contact', :form => f
   = f.input :highest_level
   = f.input :notes, :input_html => {:cols => 25, :rows => 3}
   .form-actions
