--- a/app/views/office/registrations/_registration.html.haml
+++ b/app/views/office/registrations/_registration.html.haml
@@ -1,3 +1,3 @@
-= render 'office/angels/angel', :angel => registration.angel
+= render 'office/registrations/contact', :registration => registration
 = render 'office/registrations/request', :registration => registration
 = render 'office/registrations/payment', :registration => registration
