--- a/app/views/public_signups/de/_registration_form.html.haml
+++ b/app/views/public_signups/de/_registration_form.html.haml
@@ -1,19 +1,19 @@
 = r.inputs do
+  = r.input :lang, as: :hidden
   = r.input :event, options_for_public_signup_events_select(r)
 
-  = r.semantic_fields_for :angel do |a|
-    = a.input :first_name,  :input_html => {:size => 20}
-    = a.input :last_name,   :input_html => {:size => 20}
-    .instructions= _('public_signup.form.gender')
-    = a.input :gender, options_for_gender(a)
-    = a.input :email,   :input_html => {:size => 30}
-    = a.input :address,   :input_html => {:size => 30}
-    = a.input :postal_code,  :input_html => {:size => 10}
-    = a.input :city,   :input_html => {:size => 20}
-    = a.input :country, options_for_country(a)
-    = a.input :home_phone,  :input_html => {:size => 20}
-    = a.input :mobile_phone,  :input_html => {:size => 20}
-    = a.input :work_phone,  :input_html => {:size => 20}
+  = r.input :first_name,  :input_html => {:size => 20}
+  = r.input :last_name,   :input_html => {:size => 20}
+  .instructions= _('public_signup.form.gender')
+  = r.input :gender, options_for_gender(r)
+  = r.input :email,   :input_html => {:size => 30}
+  = r.input :address,   :input_html => {:size => 30}
+  = r.input :postal_code,  :input_html => {:size => 10}
+  = r.input :city,   :input_html => {:size => 20}
+  = r.input :country, options_for_country(r)
+  = r.input :home_phone,  :input_html => {:size => 20}
+  = r.input :mobile_phone,  :input_html => {:size => 20}
+  = r.input :work_phone,  :input_html => {:size => 20}
 
   .instructions= _('public_signup.form.workshop_information')
   = r.input :backjack_rental, options_for_backjack_rental(r)
