--- a/app/views/office/angels/_map_info.html.haml
+++ b/app/views/office/angels/_map_info.html.haml
@@ -1,6 +1,7 @@
 %table.table.table-striped
   %thead
     %tr
+      %th Img
       %th Name
       %th Email
       %th Address
@@ -8,6 +9,7 @@
   %tbody
     - angels.each do |a|
       %tr
+        %td= gravatar_image(a.gravatar)
         %td= link_to_show(office_angel_path(a), a.full_name)
         %td= a.email
         %td= compact_address(a)
