--- a/app/views/office/memberships/_form.html.haml
+++ b/app/views/office/memberships/_form.html.haml
@@ -2,7 +2,7 @@
   = f.association :angel, options_for_angel_select(f)
   = f.input :status, options_for_membership_status(f)
   = f.input :active_on, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y'
-  = f.input :retired_on, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y'
+  = f.input :retired_on, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y' if @membership.persisted?
   = f.input :participant_cost
   = f.input :team_cost
   = f.input :notes, :input_html => {:cols => 25, :rows => 3}
