--- a/app/views/layouts/office/application.html.haml
+++ b/app/views/layouts/office/application.html.haml
@@ -1,5 +1,5 @@
-!!! Strict
-%html{:lang => "en", :xmlns => "http://www.w3.org/1999/xhtml"}
+!!! 5
+%html{:lang => "en"}
   %head
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     %title= @title || "HAI #{Site.name.upcase} System"
