allow editing extra fields on angels & registrations

--- a/app/views/office/angels/_form.html.haml
+++ b/app/views/office/angels/_form.html.haml
@@ -1,5 +1,9 @@
 = simple_form_for([:office, angel], html: {class: 'form-horizontal'}) do |f|
   = render 'office/registrations/fields_contact', :form => f
+  = f.input :payment_method, options_for_payment_method(f, :translate => false)
+  = f.input :bank_account_name,  :input_html => {:size => 30}
+  = f.input :iban,  :input_html => {:size => 30}
+  = f.input :bic,  :input_html => {:size => 30}
   = f.input :highest_level
   = f.input :notes, :input_html => {:cols => 25, :rows => 3}
   .form-actions
