--- a/app/views/office/registrations/_form.html.haml
+++ b/app/views/office/registrations/_form.html.haml
@@ -3,12 +3,11 @@
     #error_explanation
       %h3= "#{pluralize(registration.errors.count, "error")} prohibited this registration from being saved"
 
-  - if parent.event
-    = r.association :angel, options_for_angel_select(r)
-  - else
-    = r.association :event, options_for_signup_events_select(r)
+  = r.association :angel, options_for_angel_select(r)
+  = r.association :event, options_for_signup_events_select(r)
   = r.input :role, options_for_role(r)
 
+  = render 'office/registrations/fields_contact', :form => r
   = render 'office/registrations/fields_requests', :form => r
   = render 'office/registrations/fields_payment', :form => r
 
