office team member interface

--- a/app/assets/stylesheets/office/application.css.scss
+++ b/app/assets/stylesheets/office/application.css.scss
@@ -111,3 +111,12 @@ body {
     padding: 20px;
   }
 }
+
+.team-delta {
+  margin-top: 40px;
+  span {
+    color: white;
+    font-size: 30px;
+    padding: 10px;
+  }
+}
