--- a/app/views/office/members/edit.html.haml
+++ b/app/views/office/members/edit.html.haml
@@ -3,6 +3,6 @@
     = controls do |c|
       - add_button_to(c, :delete)
 
-    %h2 Editing team
+    %h2 Editing team member request
 
     = render 'form'
