--- a/app/views/office/teams/show.html.haml
+++ b/app/views/office/teams/show.html.haml
@@ -2,6 +2,6 @@
   .content
     = controls do |c|
       - add_button_to(c, :edit)
-      - add_button_to(c, :delete)
 
     = render @team
+    = render 'quick_add', team: @team
