--- a/app/views/office/teams/_team.html.haml
+++ b/app/views/office/teams/_team.html.haml
@@ -1,4 +1,10 @@
 %h2=link_to(team.name, [:office, team])
-Desired Size: #{team.desired_size}
-%br
-Actual Size: XX
+
+= render team.stats
+
+.content
+  - if team.members.any?
+    = render 'members', members: team.members
+  - else
+    %i No team members signed up, yet!
+
