--- a/app/assets/stylesheets/office/application.css.scss
+++ b/app/assets/stylesheets/office/application.css.scss
@@ -120,3 +120,9 @@ body {
     padding: 10px;
   }
 }
+
+.team-member {
+  .role { font-weight: bold; }
+  .notes { font-style: italic; }
+  .status { color: #0f8a26; }
+}
