--- a/app/views/office/members/_form.html.haml
+++ b/app/views/office/members/_form.html.haml
@@ -1,6 +1,6 @@
 = simple_form_for([:office, @team, @member], html: {class: 'form form-horizontal'}) do |f|
   .form-inputs
-    = f.association :membership, options_for_membership_select(f)
+    = f.input :membership_id, as: :hidden
     = f.input :role, options_for_member_role(f)
     = f.input :notes, input_html: { cols: nil, rows: 5}
 
