--- a/app/views/office/members/_member.html.haml
+++ b/app/views/office/members/_member.html.haml
@@ -1,4 +1,6 @@
-.row-fluid
-  = link_to(member.full_name, [:edit, :office, member.team, member])
-  %b= "[#{member.role}]" if member.role.present?
-  %i= member.notes
+- member = member.decorate
+.row-fluid.team-member
+  %span.name= link_to(member.full_name, [:edit, :office, member.team, member])
+  %span.role= "[#{member.role}]" if member.role.present?
+  %span.status= member.status
+  %span.notes= member.notes
