--- a/app/views/office/memberships/_secondary_navigation.html.haml
+++ b/app/views/office/memberships/_secondary_navigation.html.haml
@@ -6,6 +6,8 @@
     %li= link_to(icon('icon-list-alt') + "Active", office_memberships_path)
     %li= link_to(icon('icon-list-alt') + "Retired", office_memberships_path(status: 'retired'))
     %li= link_to(icon('icon-list-alt') + "All", office_memberships_path(status: 'all'))
+    %li.nav-header Refresh
+    %li= link_to(icon('icon-refresh') + "Status", recalc_status_office_memberships_path, method: :post)
     %li.nav-header Export
     %li= link_to(icon('icon-envelope') + "Address Book", url_for(params.merge(format: :vcard)))
     %li= link_to(icon('icon-list') + "Spreadsheet", url_for(params.merge(format: :csv)))
