added user profile, user team signup

--- a/app/assets/stylesheets/office/application.css.scss
+++ b/app/assets/stylesheets/office/application.css.scss
@@ -125,7 +125,8 @@ body {
 }
 
 .team-delta {
-  margin-top: 40px;
+  margin-top: 26px;
+  margin-bottom: 26px;
   span {
     color: white;
     font-size: 30px;
