--- a/app/views/office/teams/_quick_add.html.haml
+++ b/app/views/office/teams/_quick_add.html.haml
@@ -1,3 +1,3 @@
 - member = team.members.build
 = simple_form_for([:office, team, member], html: {class: 'form form-inline'}) do |f|
-  = f.select :membership_id, members_for_select, {}, {:onchange => 'this.form.submit()'}
+  = f.select :membership_id, members_for_select(gender), {}, {:onchange => 'this.form.submit()'}
