--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -18,7 +18,7 @@
         %h1
           HAI UK
       #content
-        = _('uk.layout.content_top')
+        = _('uk.layout1.content_top')
         #column2
           #haidbcontainer
             #flash{ :'padding-left' => '60px' }
@@ -29,8 +29,6 @@
             #haidbcontent
               = yield
             .clear
-
-            = debug(params) if Rails.env.development?
 
       #footer
         creating a world where everyone wins
