use simple_form rather than formtastic; remove formtastic

--- a/app/views/de/public_signups/_switch_language.html.haml
+++ b/app/views/de/public_signups/_switch_language.html.haml
@@ -1,4 +1,4 @@
-%p#lang
+%p.switch-language
   - if language?(:de)
     If you prefer you may
     = link_to('register in English.', new_public_signup_path(:locale => :en))
