--- a/app/views/de/public_signups/_registration_form.html.haml
+++ b/app/views/de/public_signups/_registration_form.html.haml
@@ -1,36 +1,34 @@
-= r.inputs do
-  = r.input :lang, as: :hidden
-  = r.input :event, options_for_public_signup_events_select(r)
+= r.input :lang, as: :hidden
+= r.association :event, options_for_public_signup_events_select(r)
 
-  = r.input :first_name,  :input_html => {:size => 20}
-  = r.input :last_name,   :input_html => {:size => 20}
-  .instructions= _('public_signup.form.gender')
-  = r.input :gender, options_for_gender(r)
-  = r.input :email,   :input_html => {:size => 30}
-  = r.input :address,   :input_html => {:size => 30}
-  = r.input :postal_code,  :input_html => {:size => 10}
-  = r.input :city,   :input_html => {:size => 20}
-  = r.input :country, options_for_country(r)
-  = r.input :home_phone,  :input_html => {:size => 20}
-  = r.input :mobile_phone,  :input_html => {:size => 20}
-  = r.input :work_phone,  :input_html => {:size => 20}
+= r.input :first_name,  :input_html => {:size => 20}
+= r.input :last_name,   :input_html => {:size => 20}
+.instructions= _('public_signup.form.gender')
+= r.input :gender, options_for_gender(r)
+= r.input :email,   :input_html => {:size => 30}
+= r.input :address,   :input_html => {:size => 30}
+= r.input :postal_code,  :input_html => {:size => 10}
+= r.input :city,   :input_html => {:size => 20}
+= r.input :country, options_for_country(r)
+= r.input :home_phone,  :input_html => {:size => 20}
+= r.input :mobile_phone,  :input_html => {:size => 20}
+= r.input :work_phone,  :input_html => {:size => 20}
 
-  .instructions= _('public_signup.form.workshop_information')
-  = r.input :backjack_rental, options_for_backjack_rental(r)
-  = r.input :sunday_choice, options_for_sunday_choice(r)
-  = r.input :lift, options_for_lift(r)
+.instructions= _('public_signup.form.workshop_information')
+= r.input :backjack_rental, options_for_backjack_rental(r)
+= r.input :sunday_choice, options_for_sunday_choice(r)
+= r.input :lift, options_for_lift(r)
 
-  .instructions= _('public_signup.form.payment')
-  = r.input :payment_method, options_for_payment_method(r)
+.instructions= _('public_signup.form.payment')
+= r.input :payment_method, options_for_payment_method(r)
 
-  #debt
-    = r.input :bank_account_name, :input_html => {:size => 30}
-    = r.input :iban, :input_html => {:size => 20}
-    = r.input :bic, :input_html => {:size => 20}
+#debt
+  = r.input :bank_account_name, :input_html => {:size => 30}
+  = r.input :iban, :input_html => {:size => 20}
+  = r.input :bic, :input_html => {:size => 20}
 
-= r.inputs do
-  .instructions= _('public_signup.form.note')
-  = r.input :notes, options_for_note(r)
+.instructions= _('public_signup.form.note')
+= r.input :notes, options_for_note(r)
 
 - content_for :javascript do
   = javascript_include_tag "public_signup"
