--- a/app/views/uk/public_signups/_registration_form.html.haml
+++ b/app/views/uk/public_signups/_registration_form.html.haml
@@ -1,31 +1,30 @@
-= r.inputs do
-  = r.input :lang, as: :hidden
-  = r.input :event, options_for_public_signup_events_select(r)
-  = r.input :role, options_for_role(r)
+= r.input :lang, as: :hidden
+= r.association :event, options_for_public_signup_events_select(r)
+= r.input :role, options_for_role(r)
 
-  = r.input :first_name,  :input_html => {:size => 20}
-  = r.input :last_name,   :input_html => {:size => 20}
-  = r.input :gender, options_for_gender(r)
-  = r.input :email,   :input_html => {:size => 30}
-  = r.input :address,   :input_html => {:size => 30}
-  = r.input :city,   :input_html => {:size => 20}
-  = r.input :postal_code,  :input_html => {:size => 10}
-  = r.input :country, options_for_country(r)
-  = r.input :home_phone,  :input_html => {:size => 20}
-  = r.input :mobile_phone,  :input_html => {:size => 20}
-  = r.input :work_phone,  :input_html => {:size => 20}
+= r.input :first_name,  :input_html => {:size => 20}
+= r.input :last_name,   :input_html => {:size => 20}
+= r.input :gender, options_for_gender(r)
+= r.input :email,   :input_html => {:size => 30}
+= r.input :address,   :input_html => {:size => 30}
+= r.input :city,   :input_html => {:size => 20}
+= r.input :postal_code,  :input_html => {:size => 10}
+= r.input :country, options_for_country(r)
+= r.input :home_phone,  :input_html => {:size => 20}
+= r.input :mobile_phone,  :input_html => {:size => 20}
+= r.input :work_phone,  :input_html => {:size => 20}
 
-  .instructions= _('public_signup.form.workshop_information')
-  = r.input :special_diet, options_for_special_diet(r)
-  = r.input :lift, options_for_lift(r)
+.instructions= _('public_signup.form.workshop_information')
+= r.input :special_diet, options_for_special_diet(r)
+= r.input :lift, options_for_lift(r)
 
-  .instructions= _('public_signup.form.note')
-  = r.input :notes, options_for_note(r)
+.instructions= _('public_signup.form.note')
+= r.input :notes, options_for_note(r)
 
-  = r.input :how_hear, options_for_how_hear(r)
-  = r.input :previous_event, options_for_previous_event(r)
+= r.input :how_hear, options_for_how_hear(r)
+= r.input :previous_event, options_for_previous_event(r)
 
-  .instructions= _('public_signup.form.previous_workshop.instructions')
-  = r.input :highest_level, label: _('public_signup.form.previous_workshop.highest_level'), input_html: {:size => 5}
-  = r.input :highest_location, label: _('public_signup.form.previous_workshop.highest_location'),  input_html: {:size => 30}
-  = r.input :highest_date, label: _('public_signup.form.previous_workshop.highest_date'), input_html: {:size => 20}
+.instructions= _('public_signup.form.previous_workshop.instructions')
+= r.input :highest_level, label: _('public_signup.form.previous_workshop.highest_level'), input_html: {:size => 5}
+= r.input :highest_location, label: _('public_signup.form.previous_workshop.highest_location'),  input_html: {:size => 30}
+= r.input :highest_date, label: _('public_signup.form.previous_workshop.highest_date'), input_html: {:size => 20}
