--- a/app/views/office/public_signups/index.html.haml
+++ b/app/views/office/public_signups/index.html.haml
@@ -1,8 +1,8 @@
 .block
   .content
     %h2
-      #{pluralize(public_signups.count, 'signup is', 'signups are')} 
+      #{pluralize(@public_signups.flatten.count, 'signup is', 'signups are')}
       pending approval
 
-    - if public_signups.count > 0
-      = render 'public_signup_list', public_signups: public_signups
+    - @public_signups.each do |event_signups|
+      = render 'public_signups', public_signups: event_signups
