--- a/app/views/office/registrations/checked_in/index.html.haml
+++ b/app/views/office/registrations/checked_in/index.html.haml
@@ -1,7 +1,7 @@
 .block
   .content
 
-    %h2 #{event.display_name} Checked in Angels
+    %h2 #{@event.display_name} Checked in Angels
 
     %p
       Click the header links to mark all angels, or click the toggle button
