--- a/app/views/office/registrations/completed/index.html.haml
+++ b/app/views/office/registrations/completed/index.html.haml
@@ -1,7 +1,7 @@
 .block
   .content
 
-    %h2 Angels who have completed #{event.display_name}
+    %h2 Angels who have completed #{@event.display_name}
 
     %p
       Click the header links to mark all angels, or click the toggle button
