--- a/app/views/office/registrations/edit.html.haml
+++ b/app/views/office/registrations/edit.html.haml
@@ -4,6 +4,6 @@
       - add_button_to(c, :delete)
 
     %h2
-      #{registration.event_name}: edit registration of #{registration.full_name}
+      #{@registration.event_name}: edit registration of #{@registration.full_name}
 
     = render 'form'
