--- a/app/views/office/registrations/_secondary_navigation.html.haml
+++ b/app/views/office/registrations/_secondary_navigation.html.haml
@@ -1,20 +1,19 @@
-- if event.present?
-  = content_for :secondary_navigation do
-    %ul.nav.nav-list
-      %li.nav-header= event.display_name
-      %li= link_to_new(new_office_event_registration_path(event), "New Registration")
-      %li.nav-header Reports
-      %li= link_to(icon('icon-map-marker') + "Show on Map", office_event_map_index_path(event))
-      %li= link_to(icon('icon-list-alt') + "Attendance", office_event_registrations_path(event))
-      %li= link_to(icon('icon-list-alt') + "Details", details_office_event_registrations_path(event))
-      %li= link_to(icon('icon-list-alt') + "Payment Summary", payments_office_event_registrations_path(event))
-      - if Site.de?
-        %li= link_to(icon('icon-list-alt') + "Bank Summary", bank_accounts_office_event_registrations_path(event))
-      %li= link_to(icon('icon-list-alt') + "Checklist", checklists_office_event_registrations_path(event))
-      %li= link_to(icon('icon-list-alt') + "Roster", roster_office_event_registrations_path(event))
-      %li.nav-header Actions
-      %li= link_to(icon('icon-edit') + "Mark Checked In", office_event_checked_in_index_path(event))
-      %li= link_to(icon('icon-edit') + "Mark Completed", office_event_completed_index_path(event))
-      %li.nav-header Export
-      %li= link_to(icon('icon-envelope') + "Address Book", office_event_registrations_path(event, format: :vcard))
-      %li= link_to(icon('icon-list') + "Spreadsheet", office_event_registrations_path(event, format: :csv))
+= content_for :secondary_navigation do
+  %ul.nav.nav-list
+    %li.nav-header= @event.display_name
+    %li= link_to_new(office_angels_path, "New Registration")
+    %li.nav-header Reports
+    %li= link_to(icon('icon-map-marker') + "Show on Map", office_event_map_index_path(@event))
+    %li= link_to(icon('icon-list-alt') + "Attendance", office_event_registrations_path(@event))
+    %li= link_to(icon('icon-list-alt') + "Details", details_office_event_registrations_path(@event))
+    %li= link_to(icon('icon-list-alt') + "Payment Summary", payments_office_event_registrations_path(@event))
+    - if Site.de?
+      %li= link_to(icon('icon-list-alt') + "Bank Summary", bank_accounts_office_event_registrations_path(@event))
+    %li= link_to(icon('icon-list-alt') + "Checklist", checklists_office_event_registrations_path(@event))
+    %li= link_to(icon('icon-list-alt') + "Roster", roster_office_event_registrations_path(@event))
+    %li.nav-header Actions
+    %li= link_to(icon('icon-edit') + "Mark Checked In", office_event_checked_in_index_path(@event))
+    %li= link_to(icon('icon-edit') + "Mark Completed", office_event_completed_index_path(@event))
+    %li.nav-header Export
+    %li= link_to(icon('icon-envelope') + "Address Book", office_event_registrations_path(@event, format: :vcard))
+    %li= link_to(icon('icon-list') + "Spreadsheet", office_event_registrations_path(@event, format: :csv))
