--- a/app/views/office/registrations/bank_accounts.html.haml
+++ b/app/views/office/registrations/bank_accounts.html.haml
@@ -1,4 +1,4 @@
 .block
   .content
-    %h2 #{event.display_name} Bank Accounts
+    %h2 #{@event.display_name} Bank Accounts
     = render 'grouped_by_role', list: 'bank_accounts', registrations: registrations
