--- a/app/views/office/registrations/checklists.html.haml
+++ b/app/views/office/registrations/checklists.html.haml
@@ -3,5 +3,5 @@
     = controls do |c|
       - add_button_to(c, "PDF Format", :format => :pdf)
 
-    %h2 #{event.display_name} Checklists
+    %h2 #{@event.display_name} Checklists
     = render 'grouped_by_role', list: 'checklists', registrations: registrations
